deploy/k8s/deployment.yaml
# Generated by IBM Migration Artifacts Bundler
# Fri Nov 29 12:50:24 UTC 2024
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: slidertest001snapshotwar
  name: slidertest001snapshotwar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slidertest001snapshotwar
  template:
    metadata:
      labels:
        app: slidertest001snapshotwar
    spec:
      containers:
        - image: IMAGE_REFERENCE
          imagePullPolicy: Always
          name: slidertest001snapshotwar
          ports:
            - containerPort: 9080
              protocol: TCP
