deploy/k8s/service.yaml
# Generated by IBM Migration Artifacts Bundler
# Fri Nov 29 12:50:24 UTC 2024
apiVersion: v1
kind: Service
metadata:
  labels:
    app: slidertest001snapshotwar
  name: slidertest001snapshotwar
spec:
  type: NodePort
  ports:
    - name: http
      port: 9080
      targetPort: 9080
  selector:
    app: slidertest001snapshotwar
