deploy/k8s/route.yaml
# Generated by IBM Migration Artifacts Bundler
# Fri Nov 29 12:50:24 UTC 2024
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: slidertest001snapshotwar
  name: slidertest001snapshotwar
spec:
  path:
    /
  port:
    targetPort: http
  to:
    kind: Service
    name: slidertest001snapshotwar
    weight: 100
